# adventOfCode

./: Cargo.toml  README.md
day9/src/: inputTest  lib.rs
src/: main.rs  utils.rs
src/day1/: chall1.rs  chall2.rs  inputTest.txt
src/day2/: chall2.rs  day2chall1.rs  day2chall2.rs
src/day3/: day3chall1.rs  day3chall2.rs  inputTest.txt
src/day4/: cell.rs  day4chall1.rs  day4chall1_2.rs
src/day5/: day5chall1.rs  day5chall2.rs  inputTest.txt
src/day6/: day6chall.rs  inputTest.txt
src/day7/: day7chall1.rs  day7chall2.rs
src/day8/: day8chall1.rs  day8chall2.rs  inputTest
