[workspace]

members = ["day*", "utils"]

[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chall1"
path = "src/day1/chall1.rs"
test = false
bench = false

[[bin]]
name = "chall2"
path = "src/day1/chall2.rs"
test = false
bench = false

[[bin]]
name = "day2chall1" # name and file name have to be the same
path = "src/day2/day2chall1.rs"
test = false
bench = false

[[bin]]
name = "day2chall2" # name and file name have to be the same
path = "src/day2/day2chall2.rs"
test = false
bench = false

[[bin]]
name = "day3chall1"
path = "src/day3/day3chall1.rs"
test = false
bench = false

[[bin]]
name = "day3chall2"
path = "src/day3/day3chall2.rs"
test = false
bench = false

[[bin]]
name = "day4chall1_2"
path = "src/day4/day4chall1_2.rs"
test = false
bench = false

[[bin]]
name = "day5chall1"
path = "src/day5/day5chall1.rs"
test = false
bench = false

[[bin]]
name = "day5chall2"
path = "src/day5/day5chall2.rs"
test = false
bench = false

[[bin]]
name = "day6chall"
path = "src/day6/day6chall.rs"
test = false
bench = false

[[bin]]
name = "day7chall1"
path = "src/day7/day7chall1.rs"
test = false
bench = false

[[bin]]
name = "day7chall2"
path = "src/day7/day7chall2.rs"
test = false
bench = false

[[bin]]
name = "day8chall1"
path = "src/day8/day8chall1.rs"
test = false
bench = false

[[bin]]
name = "day8chall2"
path = "src/day8/day8chall2.rs"
test = false
bench = false

[lib]
name = "utils"
path = "src/utils.rs"

[dependencies]
itertools = "0.10.1"
grid = "0.6.0"
termion = "*"
